# remote_monitor

./: CMakeLists.txt
monitor_client/: CMakeLists.txt
monitor_client/src/: client.cpp  client.h  project_header.h
monitor_client_gui/: CMakeLists.txt
monitor_client_gui/src/: client_frame.cpp  client_panel.h  project_header.h
monitor_client_gui/src/res/: app.rc.cmake
monitor_daemon/: CMakeLists.txt
monitor_daemon/src/: monitor_log.h  monitor_main.cpp  monitor_main.h  monitor_viewport.cpp  monitor_viewport.h  project_header.h
netlib/: CMakeLists.txt
netlib/src/: netlib.h  netlib_client.cpp  netlib_client.h  netlib_core.cpp  netlib_core.h  netlib_log.h  netlib_message.cpp  netlib_message.h  netlib_mgr.cpp  netlib_mgr.h  netlib_sender.cpp  netlib_sender.h  netlib_server.cpp  netlib_server.h  netlib_server.hpp  netlib_session.cpp  netlib_session.h  netlib_signal.cpp  netlib_signal.h  netlib_types.h  netlib_util.cpp  netlib_util.h  project_header.h
opensource/patches/poco-1.7.0-all.patches/: patch.cmake
opensource/patches/protobuf-cpp-3.7.1.patches/: patch.cmake
opensource/patches/protobuf-cpp-3.7.1.patches/cmake/: CMakeLists.txt
opensource/patches/zlib-1.2.8.patches/: CMakeLists.txt  patch.cmake
opensource/protogen-1.0/: CMakeLists.txt
protofiles/: Boss.proto  Protocol.proto  Slave.proto  Viewport.proto
remote_client/: CMakeLists.txt
remote_client/src/: project_header.h  remote_client.cpp  remote_client.h
remote_client_gui/: CMakeLists.txt
remote_client_gui/src/: client_app.cpp  client_app.h  client_frame.cpp  client_frame.h  client_panel.cpp  client_panel.h  project_header.h
remote_server/: CMakeLists.txt
remote_server/src/: main.cpp  project_header.h  remote_server.cpp  remote_server.h
scripts/: build.cmd  cmakegen_msvc16_x64_debug.cmd  cmakegen_msvc16_x64_release.cmd  cmakegen_msvc16_x86_debug.cmd  cmakegen_msvc16_x86_release.cmd
